# isolated

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  compile_commands.json  main.cpp  simulation_roadmap.md
.cache/clangd/index/: benchmark.cpp.4881609A6B0404A0.idx  blood_chemistry.cpp.3ABB7FB0AA2825D8.idx  blood_chemistry.hpp.24B15B66DDC56946.idx  circulation.cpp.04C541DC13D46C84.idx  circulation.hpp.95C414E833E17462.idx  coagulation.hpp.7D8314C6DD49EDDB.idx  constants.hpp.6C0C3FF9D0A4E30B.idx  heat_engine.cpp.57AEE315677532B9.idx  heat_engine.hpp.1C4BD7CFD6DE7252.idx  immune.hpp.643A53F5A53C6F6F.idx  integumentary.hpp.381BD593D24ABC18.idx  lattice.hpp.3BD40485C79D7130.idx  lbm_cuda.cuh.196378FD513DA792.idx  lbm_engine.cpp.D87DC966C6A32B3A.idx  lbm_engine.hpp.BF02862EE2E6408E.idx  main.cpp.B1137F6489C637EE.idx  materials.hpp.2EBD4DCC3BD7C186.idx  metabolism.hpp.DE58F023DFD80520.idx  multiphase.cpp.8FF584F77B68108F.idx  multiphase.hpp.367CFFAB0CE6FC88.idx  muscular.hpp.B360E93EF0443402.idx  nervous.hpp.D5B3EB56989C043E.idx  respiration.hpp.7A5FC12001557107.idx  test_basic.cpp.8DE95AE014E5966D.idx  thermoregulation.hpp.E9B4DC4FB4E76E60.idx  ventilation.hpp.29DC079758133F50.idx  worldgen.cpp.585F42BB5D0E4084.idx  worldgen.hpp.92BECDAA66DD2351.idx
include/isolated/biology/: blood_chemistry.hpp  brain_perfusion.hpp  circulation.hpp  coagulation.hpp  cognitive.hpp  gas_transport.hpp  hematology.hpp  immune.hpp  integumentary.hpp  lymphatic.hpp  metabolism.hpp  muscular.hpp  nervous.hpp  physiology.hpp  respiration.hpp  sensory.hpp  thermoregulation.hpp  ventilation.hpp
include/isolated/core/: constants.hpp  lod_zone_manager.hpp
include/isolated/entities/: components.hpp  entity_manager.hpp  metabolism_system.hpp  needs_system.hpp  spatial_index.hpp
include/isolated/fluids/: breach.hpp  immersed_boundary.hpp  instabilities.hpp  lattice.hpp  lbm_cuda.cuh  lbm_engine.hpp  multiphase.hpp
include/isolated/gpu/: gpu_compute.hpp
include/isolated/perf/: cache_friendly.hpp
include/isolated/renderer/: color_maps.hpp  debug_ui.hpp  renderer.hpp
include/isolated/thermal/: evaporative_cooling.hpp  heat_engine.hpp  materials.hpp  thermal_cuda.cuh
include/isolated/world/: chunk.hpp  chunk_manager.hpp  terrain_generator.hpp
include/isolated/worldgen/: biomes.hpp  geology_dynamics.hpp  hydrology.hpp  worldgen.hpp
src/biology/: blood_chemistry.cpp  circulation.cpp
src/core/: lod_zone_manager.cpp
src/entities/: entity_manager.cpp  metabolism_system.cpp  needs_system.cpp
src/fluids/: lbm_cuda.cu  lbm_cuda_stubs.cpp  lbm_engine.cpp  multiphase.cpp
src/gpu/: gpu_compute.cpp
src/renderer/: debug_ui.cpp  renderer.cpp
src/thermal/: heat_engine.cpp  thermal_cuda.cu  thermal_cuda_stubs.cpp
src/world/: chunk_manager.cpp  terrain_generator.cpp
src/worldgen/: worldgen.cpp
tests/: CMakeLists.txt  benchmark.cpp  test_basic.cpp
